# pre-commit-workshop

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  demo-notes.md  example.py  index.html  pdf-export.mjs  pyproject.toml
.github/: dependabot.yml
.github/workflows/: static.yml
src/custom_hook/: __init__.py  check.py
src/filename_validation/: __init__.py  cli.py  validate_filename.py
