[project]
name = "filename-validation"
version = "0.1.0"
authors = [
  {name = "Stefanie Molin", email = "email@example.com"},
]
description = "Validates that filenames meet criteria."
readme = "README.md"

requires-python = ">=3.10"
dependencies = []

scripts.validate-filename = "filename_validation.cli:main"

[dependency-groups]
dev = [
    "pre-commit",  # so you can run hooks on the codebase
    # "pytest",  # remember to add tests for your hook
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear rules
    "E", # pycodestyle error rules
    "F", # pyflakes rules
    "I", # isort rules
    "W", # pycodestyle warning rules
]
ignore = [
    "E501", # line-too-long
]
