[project]
name = "custom-hook"
version = "0.1.0"
authors = [{name = "TODO", email = "TODO@TODO"},]
description = "A pre-commit hook created during the workshop."
readme = "README.md"

requires-python = ">=3.10"
dependencies = []  # TODO: declare any dependencies

# TODO: update `your-script-name` with the name of your choice
# TODO: update `pkg.module:function` to point to your function
scripts.your-script-name = "pkg.module:function"

[dependency-groups]
dev = [
    "pre-commit",  # so you can run hooks on the codebase
    # "pytest",  # remember to add tests for your hook
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear rules
    "E", # pycodestyle error rules
    "F", # pyflakes rules
    "I", # isort rules
    "W", # pycodestyle warning rules
]
ignore = [
    "E501", # line-too-long
]
